@@ -161,10 +161,12 @@ exportMethods(
     getPosition,
     getQuality,
     getQuery,
+    getScanAnnotation,
     getScanID,
     getScanVariable,
     getScanVariableNames,
     getSex,
+    getSnpAnnotation,
     getSnpID,
     getSnpVariable,
     getSnpVariableNames,
